--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: Set up JDK 21 with Temurin
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
-          distribution: 'temurin' # Specify the Java distribution
+          java-version: '21'            # Specify the Java version
+          distribution: 'temurin'       # Specify the JDK distribution (Temurin)
 
       - name: Build with Gradle
         run: ./gradlew build
@@ -38,4 +38,3 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker tag sew_styles_backend otizaaa/sew_styles_backend:latest
           docker push otizaaa/sew_styles_backend:latest
-
