--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.file.name=Logs/myLogs.logs
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
