--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,17 @@ jobs:
       - name: Build Docker Image
         run: docker build -t sew_styles_backend .
 
+      - name: Verify Docker Installation
+        run: docker --version  # Verify Docker is installed and accessible
+
       - name: Push Docker Image to DockerHub
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
+          echo "Username: $DOCKER_USERNAME"  # Ensure username is correct
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker tag sew_styles_backend otizaaa/sew_styles_backend:latest
           docker push otizaaa/sew_styles_backend:latest
+
 
