Update Tailor and User functionality, add registration flow, enhance security, and configure application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,16 @@ spring.jpa.hibernate.ddl-auto=update  # Use 'none' in production, or switch to L
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+
 # Hibernate Connection Pooling (HikariCP is the default in Spring Boot)
 # HikariCP connection pool settings
 spring.datasource.hikari.maximum-pool-size=10  # Maximum number of connections in the pool
