--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,32 @@
+spring.application.name=sew_stylesbackend
+
+# Port for the Spring Boot application
+server.port=5200
+
+# Database Connection: Using the Docker service name for MySQL
+spring.datasource.url=jdbc:mysql://sew_styles_mysql:3306/sew_styles?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=Steve
+spring.datasource.password=Steve@123
+
+# JPA/Hibernate settings
+spring.jpa.hibernate.ddl-auto=update  # Use 'none' in production, or switch to Liquibase/Flyway
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stephenowin233@gmail.com
+spring.mail.password=OtienoOwino
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+# Logging configuration (Consider using console logging or mount a volume for logs)
+logging.file.name=Logs/myLogs.logs  # You may want to mount a volume for this in Docker
+
+
 
 
